--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
           >
           <ul class="header-nav-list list">
             <li class="header-nav-link">
-              <a class="link hnl" href="/index.html" target="_blank">Studio</a>
+              <a class="link hnl header-line" href="/index.html" target="_blank"
+                >Studio</a
+              >
             </li>
             <li class="header-nav-link">
               <a class="link hnl" href="./portfolio.html" target="_blank"
@@ -43,12 +45,14 @@
         <address class="header-address">
           <ul class="header-adress-item list">
             <li class="header-address-link">
-              <a class="link" href="mailto:info@devstudio.com"
+              <a class="link header-contact" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
             <li class="header-address-link">
-              <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+              <a class="link header-contact clr-cntct" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
         </address>
