--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               >
             </li>
             <li class="header-address-link">
-              <a class="link header-contact clr-cntct" href="tel:+110001111111"
+              <a class="link header-contact" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
