--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
           <h2 class="features-titles visually-hidden" hidden>Features</h2>
           <ul class="features-list list">
             <li class="features-title">
+              <div class="features-icons">
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Strategy</h3>
               <p class="features-text">
                 Our goal is to identify the business problem to walk away with
@@ -81,6 +86,11 @@
               </p>
             </li>
             <li class="features-title">
+              <div class="features-icons">
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#clock-1"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Punctuality</h3>
               <p class="features-text">
                 Bring the key message to the brand's audience for the best price
@@ -88,6 +98,11 @@
               </p>
             </li>
             <li class="features-title">
+              <div class="features-icons">
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Diligence</h3>
               <p class="features-text">
                 Research and confirm brands that present the strongest digital
@@ -95,6 +110,11 @@
               </p>
             </li>
             <li class="features-title">
+              <div class="features-icons">
+                <svg class="" width="64" height="64">
+                  <use href="./images/icons.svg#astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Technologies</h3>
               <p class="features-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -159,6 +179,36 @@
               <div class="div-item">
                 <h3 class="team-subtitle">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="social-networks">
+                  <li class="social-network list">
+                    <a class="social-icons">
+                      <svg class="" width="16" height="16">
+                        <use href="./images/icons.svg#instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-network list">
+                    <a class="social-icons"
+                      ><svg class="" width="16" height="16">
+                        <use href="./images/icons.svg#twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-network list">
+                    <a class="social-icons"
+                      ><svg class="" width="16" height="16">
+                        <use href="./images/icons.svg#facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-network list">
+                    <a class="social-icons"
+                      ><svg class="" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -172,6 +222,36 @@
               <div class="div-item">
                 <h3 class="team-subtitle">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                <ul class="social-networks">
+                  <li class="social-network list">
+                    <a class="social-icons">
+                      <svg class="" width="16" height="16">
+                        <use href="./images/icons.svg#instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-network list">
+                    <a class="social-icons"
+                      ><svg class="" width="16" height="16">
+                        <use href="./images/icons.svg#twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-network list">
+                    <a class="social-icons"
+                      ><svg class="" width="16" height="16">
+                        <use href="./images/icons.svg#facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-network list">
+                    <a class="social-icons"
+                      ><svg class="" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -185,6 +265,36 @@
               <div class="div-item">
                 <h3 class="team-subtitle">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                <ul class="social-networks">
+                  <li class="social-network list">
+                    <a class="social-icons">
+                      <svg class="" width="16" height="16">
+                        <use href="./images/icons.svg#instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-network list">
+                    <a class="social-icons"
+                      ><svg class="" width="16" height="16">
+                        <use href="./images/icons.svg#twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-network list">
+                    <a class="social-icons"
+                      ><svg class="" width="16" height="16">
+                        <use href="./images/icons.svg#facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-network list">
+                    <a class="social-icons"
+                      ><svg class="" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -198,6 +308,36 @@
               <div class="div-item">
                 <h3 class="team-subtitle">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="social-networks">
+                  <li class="social-network list">
+                    <a class="social-icons">
+                      <svg class="" width="16" height="16">
+                        <use href="./images/icons.svg#instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-network list">
+                    <a class="social-icons"
+                      ><svg class="" width="16" height="16">
+                        <use href="./images/icons.svg#twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-network list">
+                    <a class="social-icons"
+                      ><svg class="" width="16" height="16">
+                        <use href="./images/icons.svg#facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-network list">
+                    <a class="social-icons"
+                      ><svg class="" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
