--- a/index.html
+++ b/index.html
@@ -311,28 +311,28 @@
                 <ul class="social-networks">
                   <li class="social-network list">
                     <a class="social-icons">
-                      <svg class="" width="16" height="16">
+                      <svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network list">
                     <a class="social-icons"
-                      ><svg class="" width="16" height="16">
+                      ><svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network list">
                     <a class="social-icons"
-                      ><svg class="" width="16" height="16">
+                      ><svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network list">
                     <a class="social-icons"
-                      ><svg class="" width="16" height="16">
+                      ><svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin-1"></use>
                       </svg>
                     </a>
