--- a/index.html
+++ b/index.html
@@ -343,18 +343,103 @@
           </ul>
         </div>
       </section>
+      <!-- Customers Section -->
+      <section class="customers">
+        <div class="container">
+          <h2 class="customers-title">Customers</h2>
+          <ul class="customers-container">
+            <li class="customers-icons list">
+              <a class="customers-icn">
+                <svg class="our-customers" width="104" height="56">
+                  <use href="./images/icons.svg#Logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-icons list">
+              <a class="customers-icn">
+                <svg class="our-customers" width="104" height="56">
+                  <use href="./images/icons.svg#Logo-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-icons list">
+              <a class="customers-icn">
+                <svg class="our-customers" width="104" height="56">
+                  <use href="./images/icons.svg#Logo-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-icons list">
+              <a class="customers-icn">
+                <svg class="our-customers" width="104" height="56">
+                  <use href="./images/icons.svg#Logo-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-icons list">
+              <a class="customers-icn">
+                <svg class="our-customers" width="104" height="56">
+                  <use href="./images/icons.svg#Logo-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-icons list">
+              <a class="customers-icn">
+                <svg class="our-customers" width="104" height="56">
+                  <use href="./images/icons.svg#Logo-4"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <!-- Footer section-->
     <footer class="footer">
-      <div class="container">
-        <a class="logo ftr link" href="./index.html"
-          >Web<span class="logo-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="footer-ctr container">
+        <div class="footer-logo">
+          <a class="logo ftr link" href="./index.html"
+            >Web<span class="logo-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div>
+          <p class="footer-title">Social media</p>
+          <ul class="footer-icons">
+            <li class="social-network list">
+              <a class="footer-messenger">
+                <svg class="svg-icon" width="24" height="24">
+                  <use href="./images/icons.svg#instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-network list">
+              <a class="footer-messenger"
+                ><svg class="svg-icon" width="24" height="24">
+                  <use href="./images/icons.svg#twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-network list">
+              <a class="footer-messenger"
+                ><svg class="svg-icon" width="24" height="24">
+                  <use href="./images/icons.svg#facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-network list">
+              <a class="footer-messenger"
+                ><svg class="svg-icon" width="24" height="24">
+                  <use href="./images/icons.svg#linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
