--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,10 @@
               <a class="link hnl" href="./index.html" target="_blank">Studio</a>
             </li>
             <li class="header-nav-link">
-              <a class="link hnl" href="./portfolio.html" target="_blank"
+              <a
+                class="link hnl underline"
+                href="./portfolio.html"
+                target="_blank"
                 >Portfolio</a
               >
             </li>
@@ -42,7 +45,7 @@
         <address class="header-address">
           <ul class="header-adress-item list">
             <li class="header-address-link">
-              <a class="link" href="mailto:info@devstudio.com"
+              <a class="link header-contact" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
@@ -82,14 +85,21 @@
           </ul>
           <ul class="portfolio-prject-list list">
             <li class="portfolio-link">
-              <a href="" class="link">
-                <img
-                  class="block-element"
-                  src="./images/img-8.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="addition link">
+                <div class="pop-up-window">
+                  <img
+                    class="block-element"
+                    src="./images/img-8.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="hidden-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-div">
                   <h2 class="portfolio-subtitle">
                     Banking App Interface Concept
@@ -99,14 +109,21 @@
               </a>
             </li>
             <li class="portfolio-link">
-              <a href="" class="link">
-                <img
-                  class="block-element"
-                  src="./images/img-7.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="addition link">
+                <div class="pop-up-window">
+                  <img
+                    class="block-element"
+                    src="./images/img-7.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="hidden-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-div">
                   <h2 class="portfolio-subtitle">Cashless Payment</h2>
                   <p class="portfolio-text">Marketing</p>
@@ -114,14 +131,21 @@
               </a>
             </li>
             <li class="portfolio-link">
-              <a href="" class="link">
-                <img
-                  class="block-element"
-                  src="./images/img-6.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="addition link">
+                <div class="pop-up-window">
+                  <img
+                    class="block-element"
+                    src="./images/img-6.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="hidden-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-div">
                   <h2 class="portfolio-subtitle">Meditation App</h2>
                   <p class="portfolio-text">App</p>
@@ -129,14 +153,21 @@
               </a>
             </li>
             <li class="portfolio-link">
-              <a href="" class="link">
-                <img
-                  class="block-element"
-                  src="./images/img-5.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="addition link">
+                <div class="pop-up-window">
+                  <img
+                    class="block-element"
+                    src="./images/img-5.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="hidden-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-div">
                   <h2 class="portfolio-subtitle">Taxi Service</h2>
                   <p class="portfolio-text">Marketing</p>
@@ -144,14 +175,21 @@
               </a>
             </li>
             <li class="portfolio-link">
-              <a href="" class="link">
-                <img
-                  class="block-element"
-                  src="./images/img-4.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="addition link">
+                <div class="pop-up-window">
+                  <img
+                    class="block-element"
+                    src="./images/img-4.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="hidden-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-div">
                   <h2 class="portfolio-subtitle">Screen Illustrations</h2>
                   <p class="portfolio-text">Design</p>
@@ -159,14 +197,21 @@
               </a>
             </li>
             <li class="portfolio-link">
-              <a href="" class="link">
-                <img
-                  class="block-element"
-                  src="./images/img-3.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="addition link">
+                <div class="pop-up-window">
+                  <img
+                    class="block-element"
+                    src="./images/img-3.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="hidden-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-div">
                   <h2 class="portfolio-subtitle">Online Courses</h2>
                   <p class="portfolio-text">Marketing</p>
@@ -174,14 +219,21 @@
               </a>
             </li>
             <li class="portfolio-link">
-              <a href="" class="link">
-                <img
-                  class="block-element"
-                  src="./images/img-2.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="addition link">
+                <div class="pop-up-window">
+                  <img
+                    class="block-element"
+                    src="./images/img-2.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="hidden-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-div">
                   <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
                   <p class="portfolio-text">Design</p>
@@ -189,14 +241,21 @@
               </a>
             </li>
             <li class="portfolio-link">
-              <a href="" class="link">
-                <img
-                  class="block-element"
-                  src="./images/img-1.jpg"
-                  alt="Organic Food"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="addition link">
+                <div class="pop-up-window">
+                  <img
+                    class="block-element"
+                    src="./images/img-1.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="hidden-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-div">
                   <h2 class="portfolio-subtitle">Organic Food</h2>
                   <p class="portfolio-text">Web Site</p>
@@ -204,14 +263,21 @@
               </a>
             </li>
             <li class="portfolio-link">
-              <a href="" class="link">
-                <img
-                  class="block-element"
-                  src="./images/img.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                  height="300"
-                />
+              <a href="" class="addition link">
+                <div class="pop-up-window">
+                  <img
+                    class="block-element"
+                    src="./images/img.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <p class="hidden-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-div">
                   <h2 class="portfolio-subtitle">Fresh Coffee</h2>
                   <p class="portfolio-text">Web Site</p>
@@ -225,14 +291,49 @@
 
     <!-- Footer section-->
     <footer class="footer">
-      <div class="container">
-        <a class="logo link" href="./index.html"
-          >Web<span class="logo-footer">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="footer-ctr container">
+        <div class="footer-logo">
+          <a class="logo link" href="./index.html"
+            >Web<span class="logo-footer">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div>
+          <p class="footer-title">Social media</p>
+          <ul class="footer-icons">
+            <li class="social-network list">
+              <a class="footer-messenger">
+                <svg class="svg-icon" width="24" height="24">
+                  <use href="./images/icons.svg#instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-network list">
+              <a class="footer-messenger"
+                ><svg class="svg-icon" width="24" height="24">
+                  <use href="./images/icons.svg#twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-network list">
+              <a class="footer-messenger"
+                ><svg class="svg-icon" width="24" height="24">
+                  <use href="./images/icons.svg#facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-network list">
+              <a class="footer-messenger"
+                ><svg class="svg-icon" width="24" height="24">
+                  <use href="./images/icons.svg#linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
