--- a/index.html
+++ b/index.html
@@ -181,28 +181,28 @@
                 <p class="team-text">Product Designer</p>
                 <ul class="social-networks">
                   <li class="social-network list">
-                    <a class="social-icons">
+                    <a class="social-icons" href="">
                       <svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network list">
-                    <a class="social-icons"
+                    <a class="social-icons" href=""
                       ><svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network list">
-                    <a class="social-icons"
+                    <a class="social-icons" href=""
                       ><svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network list">
-                    <a class="social-icons"
+                    <a class="social-icons" href=""
                       ><svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin-1"></use>
                       </svg>
@@ -224,28 +224,28 @@
                 <p class="team-text">Frontend Developer</p>
                 <ul class="social-networks">
                   <li class="social-network list">
-                    <a class="social-icons">
+                    <a class="social-icons" href="">
                       <svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network list">
-                    <a class="social-icons"
+                    <a class="social-icons" href=""
                       ><svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network list">
-                    <a class="social-icons"
+                    <a class="social-icons" href=""
                       ><svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network list">
-                    <a class="social-icons"
+                    <a class="social-icons" href=""
                       ><svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin-1"></use>
                       </svg>
@@ -267,28 +267,28 @@
                 <p class="team-text">Marketing</p>
                 <ul class="social-networks">
                   <li class="social-network list">
-                    <a class="social-icons">
+                    <a class="social-icons" href="">
                       <svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network list">
-                    <a class="social-icons"
+                    <a class="social-icons" href=""
                       ><svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network list">
-                    <a class="social-icons"
+                    <a class="social-icons" href=""
                       ><svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network list">
-                    <a class="social-icons"
+                    <a class="social-icons" href=""
                       ><svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin-1"></use>
                       </svg>
@@ -310,28 +310,28 @@
                 <p class="team-text">UI Designer</p>
                 <ul class="social-networks">
                   <li class="social-network list">
-                    <a class="social-icons">
+                    <a class="social-icons" href="">
                       <svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram-2"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network list">
-                    <a class="social-icons"
+                    <a class="social-icons" href=""
                       ><svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network list">
-                    <a class="social-icons"
+                    <a class="social-icons" href=""
                       ><svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-network list">
-                    <a class="social-icons"
+                    <a class="social-icons" href=""
                       ><svg class="svg-icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin-1"></use>
                       </svg>
@@ -349,42 +349,42 @@
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-container">
             <li class="customers-icons list">
-              <a class="customers-icn">
+              <a class="customers-icn" href="">
                 <svg class="our-customers" width="104" height="56">
                   <use href="./images/icons.svg#Logo"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-icons list">
-              <a class="customers-icn">
+              <a class="customers-icn" href="">
                 <svg class="our-customers" width="104" height="56">
                   <use href="./images/icons.svg#Logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-icons list">
-              <a class="customers-icn">
+              <a class="customers-icn" href="">
                 <svg class="our-customers" width="104" height="56">
                   <use href="./images/icons.svg#Logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-icons list">
-              <a class="customers-icn">
+              <a class="customers-icn" href="">
                 <svg class="our-customers" width="104" height="56">
                   <use href="./images/icons.svg#Logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-icons list">
-              <a class="customers-icn">
+              <a class="customers-icn" href="">
                 <svg class="our-customers" width="104" height="56">
                   <use href="./images/icons.svg#Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-icons list">
-              <a class="customers-icn">
+              <a class="customers-icn" href="">
                 <svg class="our-customers" width="104" height="56">
                   <use href="./images/icons.svg#Logo-4"></use>
                 </svg>
@@ -411,28 +411,28 @@
           <p class="footer-title">Social media</p>
           <ul class="footer-icons">
             <li class="social-network list">
-              <a class="footer-messenger">
+              <a class="footer-messenger" href="">
                 <svg class="svg-icon" width="24" height="24">
                   <use href="./images/icons.svg#instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="social-network list">
-              <a class="footer-messenger"
+              <a class="footer-messenger" href=""
                 ><svg class="svg-icon" width="24" height="24">
                   <use href="./images/icons.svg#twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="social-network list">
-              <a class="footer-messenger"
+              <a class="footer-messenger" href=""
                 ><svg class="svg-icon" width="24" height="24">
                   <use href="./images/icons.svg#facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="social-network list">
-              <a class="footer-messenger"
+              <a class="footer-messenger" href=""
                 ><svg class="svg-icon" width="24" height="24">
                   <use href="./images/icons.svg#linkedin-1"></use>
                 </svg>
