--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="hero-button btn" type="button">Order Service</button>
+          <button class="hero-button btn" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <!-- Features section -->
@@ -442,5 +444,15 @@
         </div>
       </div>
     </footer>
+    <div class="modal-window is-hidden" data-modal>
+      <div class="modal">
+        <button class="close-button" type="button" data-modal-close>
+          <svg class="icon-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
