--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,9 @@
               >
             </li>
             <li class="header-address-link">
-              <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+              <a class="link header-contact" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
             </li>
           </ul>
         </address>
