--- a/portfolio.html
+++ b/portfolio.html
@@ -307,28 +307,28 @@
           <p class="footer-title">Social media</p>
           <ul class="footer-icons">
             <li class="social-network list">
-              <a class="footer-messenger">
+              <a class="footer-messenger" href="">
                 <svg class="svg-icon" width="24" height="24">
                   <use href="./images/icons.svg#instagram-2"></use>
                 </svg>
               </a>
             </li>
             <li class="social-network list">
-              <a class="footer-messenger"
+              <a class="footer-messenger" href=""
                 ><svg class="svg-icon" width="24" height="24">
                   <use href="./images/icons.svg#twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="social-network list">
-              <a class="footer-messenger"
+              <a class="footer-messenger" href=""
                 ><svg class="svg-icon" width="24" height="24">
                   <use href="./images/icons.svg#facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="social-network list">
-              <a class="footer-messenger"
+              <a class="footer-messenger" href=""
                 ><svg class="svg-icon" width="24" height="24">
                   <use href="./images/icons.svg#linkedin-1"></use>
                 </svg>
