--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header">
       <div class="div-container container">
         <nav class="header-nav">
-          <a class="logo link" href="./index.html"
+          <a class="logo link list" href="./index.html"
             >Web<span class="logo-header">Studio</span></a
           >
           <ul class="header-nav-list list">
@@ -401,7 +401,7 @@
     <footer class="footer">
       <div class="footer-ctr container">
         <div class="footer-logo">
-          <a class="logo ftr link" href="./index.html"
+          <a class="logo link" href="./index.html"
             >Web<span class="logo-footer">Studio</span></a
           >
           <p class="footer-text">
