--- a/portfolio.html
+++ b/portfolio.html
@@ -295,7 +295,7 @@
     <footer class="footer">
       <div class="footer-ctr container">
         <div class="footer-logo">
-          <a class="logo link" href="./index.html"
+          <a class="logo link list" href="./index.html"
             >Web<span class="logo-footer">Studio</span></a
           >
           <p class="footer-text">
